--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,28 @@
 @import "tailwindcss";
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+html{
+  scroll-behavior: smooth;
+}
+::-webkit-scrollbar-track {
+  background: transparent; /* Tailwind's gray-800 */
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+::-webkit-scrollbar-thumb {
+  background: transparent; /* Tailwind's indigo-600 */
+  border-radius: 10px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+::-webkit-scrollbar-thumb:hover {
+  background: transparent; /* Tailwind's indigo-500 */
 }
-
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family:var(--font-baloo), Arial, Helvetica, sans-serif;
+  font-weight: 600;
+  overflow-x: hidden;
+}
+.logo{
+  font-family: var(--font-aboreto);
+  font-weight: bolder;
+}
+.links{
+  @apply hover:text-blue-600 hover:underline underline-offset-4 hidden md:block
 }
